fix logo on small screen

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -109,11 +109,11 @@ nav
       .navbar-header
         .navbar-brand
           .brand-logo
-            filter: none
-            -webkit-filter: none
-            -moz-filter: none
-            -o-filter: none
-            -ms-filter: none
+            filter: none !important
+            -webkit-filter: none !important
+            -moz-filter: none !important
+            -o-filter: none !important
+            -ms-filter: none !important
       .navbar-right
         .navbar-list-button
           .navbar-search
